# zoop-godot-rust-tutorial

./: README.md
godot/: Goop.gdextension  enemy.tscn  export_presets.cfg  icon.svg.import  project.godot  root.tscn
godot/fonts/: Covenant5x5.ttf.import
godot/images/: spritesheet.aseprite  spritesheet.png.import
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
