[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-wasm", "lazy-function-tables"] }
itertools = "0.13"
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "unwind"
strip = true
